@startuml

    !include ../lexakai/lexakai.theme
    
    title "diagram-pbf-model-metadata"
    
    Identifier <|-- PbfChangeSetIdentifier
    class PbfChangeSetIdentifier
    {
        --(constructors)--
        +PbfChangeSetIdentifier(long)
    }
    
    IntegerIdentifier <|-- PbfRevisionNumber
    class PbfRevisionNumber
    {
        --(constructors)--
        +PbfRevisionNumber(int)
    }
    
    IntegerIdentifier <|-- PbfUserIdentifier
    class PbfUserIdentifier
    {
        --(constructors)--
        +PbfUserIdentifier(int)
    }
    
    Name <|-- PbfUserName
    class PbfUserName
    {
        --(constructors)--
        +PbfUserName(String)
    }
    
@enduml

